# mzt-downloader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cli-ubuntu-x86-64.yml  cli-windows-x86-64.yml  web-ubuntu-x86-64.yml  web-windows-x86-64.yml  web-windows.yml
src/: lib.rs  main.rs
templates/: index.html
